// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditsSettings component renders 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <p>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </p>
  <div
    className="contributors"
  >
    <div
      className="contributor"
      key="felixrieseberg"
      onClick={[Function]}
    >
      <div
        className="avatar"
        style={
          Object {
            "backgroundImage": "url(https://avatars3.githubusercontent.com/u/1426799?v=4)",
          }
        }
      />
      <div
        className="details"
      >
        <h5
          className="name"
        >
          Felix Rieseberg
        </h5>
        <p
          className="location"
        >
          📍 
          San Francisco
        </p>
        <small
          className="bio"
        >
          🙇 ✨🌳 
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditsSettings component renders for contributors with less data 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <p>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </p>
  <div
    className="contributors"
  >
    <div
      className="contributor"
      key="felixrieseberg"
      onClick={[Function]}
    >
      <div
        className="avatar"
        style={
          Object {
            "backgroundImage": "url(https://avatars3.githubusercontent.com/u/1426799?v=4)",
          }
        }
      />
      <div
        className="details"
      >
        <h5
          className="name"
        >
          felixrieseberg
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditsSettings component renders nothing if we do not have contributors 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <p>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </p>
  <div
    className="contributors"
  />
</div>
`;
